[package]
name = "fluffy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-pty = { path = "../tauri-plugin-pty" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cocoa = "0.25.0"
objc = "0.2.7"
serde_with = "3.7.0"
tauri-plugin-theme = "0.4.0"
rand = "0.8.5"
