[package]
name = "tauri-plugin-pty"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
portable-pty = "0.8.0"
bytes = "1.1.0"
futures = "0.3"
futures-util = "0.3.8"
tokio-tungstenite = "0.18.0"
mt_logger = "3.0.2"
serde_with = "3.7.0"
